--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -77,6 +77,25 @@ footer hr {
     color: #D73F42;
 }
 
+.blink{
+  position: relative;
+  animation: beat 2s infinite;
+}
+
+@keyframes beat {
+    0%{
+        transform: scale(0.8);
+    }
+    50%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(0.8);
+    }
+    /* from {left: 0px;}
+    to {left: 200px;} */
+  }
+
 @media only screen and (max-width: 600px) {
     .m-text-center {
         text-align: center;
