--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -37,6 +37,23 @@ footer a:hover{
 
 }
 
+.swal-button {
+    background-color: #D73F42;
+    color: #fff;
+    border: none;
+    box-shadow: none;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 14px;
+    padding: 10px 24px;
+    margin: 0;
+    cursor: pointer;
+}
+
+.swal-button:not([disabled]):hover {
+        background-color: rgb(180, 32, 34);
+    }
+
 #userName{
     color: #D73F42;
 }
